--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="landingPage__container">
-      <nav class="main-nav">
-        <ul class="nav-elements">
-          <li class="nav-element"><a href="#">Home</a></li>
-          <li class="nav-element"><a href="#">About</a></li>
-          <li class="nav-element"><a href="#">Products</a></li>
-          <li class="nav-element"><a href="#">Contact</a></li>
-        </ul>
-      </nav>
+    <header class="landing-page">
+      <div class="photos__container">
+        <img src="photos/bgPhoto.png" alt="" class="bg-photo" />
+        <img src="photos/bootle.png" alt="" class="bootle-photo" />
+      </div>
+      <div class="text__container">
+        <nav class="main-nav">
+          <ul class="nav__elements">
+            <li class="nav__element"><a href="">Home</a></li>
+            <li class="nav__element"><a href="">About</a></li>
+            <li class="nav__element"><a href="">Products</a></li>
+            <li class="nav__element"><a href="">Contact</a></li>
+          </ul>
+        </nav>
+        <h1 class="site-title">Nothing <br />Bothers <br />Me</h1>
+        <div class="buttons__container">
+          <a href="" class="buy--button">BUY now</a>
+          <a href="" class="contact--button">contact -></a>
+        </div>
+      </div>
     </header>
   </body>
 </html>
