changes of width of bootle

--- a/index.html
+++ b/index.html
@@ -8,26 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="landing-page">
-      <div class="photos__container">
-        <img src="photos/bgPhoto.png" alt="" class="bg-photo" />
-        <img src="photos/bootle.png" alt="" class="bootle-photo" />
+    <header class="landing-page-home">
+      <div class="social-media__container">
+        <img src="photos/bootle.png" alt="" class="bootle" />
       </div>
-      <div class="text__container">
-        <nav class="main-nav">
-          <ul class="nav__elements">
-            <li class="nav__element"><a href="">Home</a></li>
-            <li class="nav__element"><a href="">About</a></li>
-            <li class="nav__element"><a href="">Products</a></li>
-            <li class="nav__element"><a href="">Contact</a></li>
-          </ul>
-        </nav>
-        <h1 class="site-title">Nothing <br />Bothers <br />Me</h1>
-        <div class="buttons__container">
-          <a href="" class="buy--button">BUY now</a>
-          <a href="" class="contact--button">contact -></a>
-        </div>
-      </div>
+      <div class="text-part__container"></div>
     </header>
   </body>
+  <script src="scrpit.js"></script>
 </html>
