social media section finished

--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://use.typekit.net/kgi8lwn.css" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/1aceabffa2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="landing-page-home">
       <div class="social-media__container">
+        <img src="photos/logo.png" alt="" class="mini-logo" />
+        <div class="social-media">
+          <ul class="social_media__links">
+            <li class="social-media__link">
+              <i class="fa-brands fa-facebook"></i>
+            </li>
+            <li class="social-media__link">
+              <i class="fa-brands fa-instagram"></i>
+            </li>
+            <li class="social-media__link">
+              <i class="fa-brands fa-twitter"></i>
+            </li>
+          </ul>
+        </div>
         <img src="photos/bootle.png" alt="" class="bootle" />
       </div>
       <div class="text-part__container"></div>
