finished of header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,26 @@
         </div>
         <img src="photos/bootle.png" alt="" class="bootle" />
       </div>
-      <div class="text-part__container"></div>
+      <div class="text-part__container">
+        <nav class="main-nav">
+          <ul class="nav__elements">
+            <li class="nav__element"><a href="#">Home</a></li>
+            <li class="nav__element"><a href="#">About</a></li>
+            <li class="nav__element"><a href="#">Products</a></li>
+            <li class="nav__element"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <h1 class="site-title">Nothing Bothers Me</h1>
+        <div class="buttons__container">
+          <a href="#" class="buy--button">BUY NOW</a>
+          <a href="#" class="contact--button"
+            >CONTACT <i class="fa-solid fa-arrow-right-long"></i
+          ></a>
+        </div>
+        <div class="messanger__container">
+          <i class="fa-brands fa-facebook-messenger"></i>
+        </div>
+      </div>
     </header>
   </body>
   <script src="scrpit.js"></script>
