--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Nothing Bothers Me</title>
     <link rel="stylesheet" href="https://use.typekit.net/kgi8lwn.css" />
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/1aceabffa2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="scrpit.js" defer>
+      s
+    </script>
   </head>
   <body>
-    <header class="landing-page-home">
-      <div class="social-media__container">
-        <img src="photos/logo.png" alt="" class="mini-logo" />
-        <div class="social-media">
-          <ul class="social_media__links">
+    <header class="header">
+      <div class="header-background">
+        <div class="background-photo"></div>
+        <div class="background-header-color"></div>
+      </div>
+      <div class="header__container">
+        <section class="social-media-links__container">
+          <img src="photos/logo.png" alt="" class="mini-logo" />
+          <ul class="social-media__links">
             <li class="social-media__link">
               <i class="fa-brands fa-facebook"></i>
             </li>
@@ -27,30 +34,27 @@
               <i class="fa-brands fa-twitter"></i>
             </li>
           </ul>
-        </div>
-        <img src="photos/bootle.png" alt="" class="bootle" />
-      </div>
-      <div class="text-part__container">
-        <nav class="main-nav">
-          <ul class="nav__elements">
-            <li class="nav__element"><a href="#">Home</a></li>
-            <li class="nav__element"><a href="#">About</a></li>
-            <li class="nav__element"><a href="#">Products</a></li>
-            <li class="nav__element"><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-        <h1 class="site-title">Nothing Bothers Me</h1>
-        <div class="buttons__container">
-          <a href="#" class="buy--button">BUY NOW</a>
-          <a href="#" class="contact--button"
-            >CONTACT <i class="fa-solid fa-arrow-right-long"></i
-          ></a>
-        </div>
-        <div class="messanger__container">
-          <i class="fa-brands fa-facebook-messenger"></i>
-        </div>
+          <img src="photos/bootle.png" alt="" class="bootle-img" />
+        </section>
+        <section class="nav-title__container">
+          <nav class="main-nav">
+            <ul class="nav__elements">
+              <li class="nav__element">Home</li>
+              <li class="nav__element">About</li>
+              <li class="nav__element">Product</li>
+              <li class="nav__element">Contact</li>
+            </ul>
+          </nav>
+          <h1 class="site-title">Nothing Bothers Me</h1>
+          <div class="buttons__contauner">
+            <a href="#" class="buy--button">buy now</a>
+            <a href="#" class="contact--button">Contact</a>
+          </div>
+        </section>
       </div>
     </header>
+    <section class="about">s</section>
+    <section class="product">s</section>
+    <section class="contact">s</section>
   </body>
-  <script src="scrpit.js"></script>
 </html>
