laptop view finished

--- a/old.html
+++ b/old.html
@@ -74,3 +74,24 @@
   <script src="scrpit.js"></script>
 </html> 
 -->
+
+<section class="about">
+  <div class="about-background">
+    <div class="background-about-color"></div>
+    <div class="background-photo-about"></div>
+  </div>
+  <div class="about-text__container">
+    <h2 class="site-title">About</h2>
+    <p class="first-text">
+      Introducing "Nothing Bothers Me" Vodka - An Unparalleled Expression of
+      Luxury and Prestige.
+    </p>
+    <p class="second-text">
+      "Nothing Bothers Me" Vodka is the epitome of refinement, meticulously
+      distilled and infused with the rarest ingredients from around the globe.
+      Every element of its creation, from the carefully selected grains to the
+      intricate distillation process, is a testament to the dedication and
+      craftsmanship invested in this unparalleled masterpiece.
+    </p>
+  </div>
+</section>
