--- a/index.html
+++ b/index.html
@@ -46,15 +46,83 @@
             </ul>
           </nav>
           <h1 class="site-title">Nothing Bothers Me</h1>
-          <div class="buttons__contauner">
+          <div class="buttons__container">
             <a href="#" class="buy--button">buy now</a>
-            <a href="#" class="contact--button">Contact</a>
+            <a href="#" class="contact--button"
+              >Contact <i class="fa-solid fa-arrow-right-long"></i
+            ></a>
           </div>
         </section>
+        <div class="messanger__container">
+          <i class="fa-brands fa-facebook-messenger"></i>
+        </div>
       </div>
     </header>
-    <section class="about">s</section>
-    <section class="product">s</section>
-    <section class="contact">s</section>
+    <section class="about">
+      <div class="about-background">
+        <div class="background-about-color"></div>
+        <div class="background-photo-about"></div>
+      </div>
+      <div class="about-text__container">
+        <h2 class="section-title">ABOUT</h2>
+        <p class="about-first-text">
+          Introducing "Nothing Bothers Me" Vodka - An Unparalleled Expression of
+          Luxury and Prestige.
+        </p>
+        <p class="about-second-text">
+          "Nothing Bothers Me" Vodka is the epitome of refinement, meticulously
+          distilled and infused with the rarest ingredients from around the
+          globe. Every element of its creation, from the carefully selected
+          grains to the intricate distillation process, is a testament to the
+          dedication and craftsmanship invested in this unparalleled
+          masterpiece.
+        </p>
+        <a href="#" class="read-more-about--button">Read more</a>
+      </div>
+    </section>
+    <section class="product">
+      <div class="product-background">
+        <div class="background-photo-product"></div>
+        <div class="background-product-color"></div>
+      </div>
+      <div class="product-text-container">
+        <h2 class="section-title">product</h2>
+        <p class="product-first-text">
+          "Nothing Bothers Me" Vodka is more than a drink; it's an emblem of
+          status and prestige. With its limited availability and carefully
+          controlled distribution, this luxurious spirit is a rare gem coveted
+          by collectors and connoisseurs.
+        </p>
+        <p class="product-second-text">
+          Its exclusivity makes it a symbol of discernment and sets it apart as
+          an investment in the finer things in life.
+        </p>
+        <a href="#" class="read-more-product--button">Read more</a>
+      </div>
+    </section>
+    <section class="contact">
+      <div class="contact-social-media">
+        <img src="photos/logo.png" alt="" class="mini-logo" />
+        <ul class="contact-social-media__links">
+          <li class="contact-social-media__link">
+            <i class="fa-brands fa-facebook"></i>
+          </li>
+          <li class="contact-social-media__link">
+            <i class="fa-brands fa-instagram"></i>
+          </li>
+          <li class="contact-social-media__link">
+            <i class="fa-brands fa-twitter"></i>
+          </li>
+        </ul>
+        <img src="photos/contactBg.png" alt="" class="contact-img" />
+      </div>
+      <div class="contact-text__container">
+        <h2 class="mini-site-title">Nothing Bothers Me</h2>
+        <div class="contact__list">
+          <p class="contact-number">tel: +1 (845) 519-0362</p>
+          <p class="contact-mail">mail: contact@nothingbothersme.com</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
