inital start for mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <i class="fa-brands fa-twitter"></i>
             </li>
           </ul>
-          <img src="photos/bootle.png" alt="" class="bootle-img" />
+          <!-- <img src="photos/bootle.png" alt="" class="bootle-img" /> -->
         </section>
         <section class="nav-title__container">
           <nav class="main-nav">
@@ -58,7 +58,7 @@
         </div>
       </div>
     </header>
-    <section class="about">
+    <!-- <section class="about">
       <div class="about-background">
         <div class="background-about-color"></div>
         <div class="background-photo-about"></div>
@@ -123,6 +123,6 @@
           <p class="contact-mail">mail: contact@nothingbothersme.com</p>
         </div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
