--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <i class="fa-brands fa-twitter"></i>
             </li>
           </ul>
-          <!-- <img src="photos/bootle.png" alt="" class="bootle-img" /> -->
+          <img src="photos/bootle-mobile.png" alt="" class="bootle-img" />
         </section>
         <section class="nav-title__container">
           <nav class="main-nav">
