--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </section>
         <section class="nav-title__container">
           <nav class="main-nav">
+            <div class="burger-bar"></div>
             <ul class="nav__elements">
               <li class="nav__element">Home</li>
               <li class="nav__element">About</li>
@@ -58,7 +59,7 @@
         </div>
       </div>
     </header>
-    <!-- <section class="about">
+    <section class="about">
       <div class="about-background">
         <div class="background-about-color"></div>
         <div class="background-photo-about"></div>
@@ -80,7 +81,7 @@
         <a href="#" class="read-more-about--button">Read more</a>
       </div>
     </section>
-    <section class="product">
+    <!-- <section class="product">
       <div class="product-background">
         <div class="background-photo-product"></div>
         <div class="background-product-color"></div>
