--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <a href="#" class="read-more-product--button">Read more</a>
       </div>
     </section>
-    <!-- <section class="contact">
+    <section class="contact">
       <div class="contact-social-media">
         <img src="photos/logo.png" alt="" class="mini-logo" />
         <ul class="contact-social-media__links">
@@ -124,6 +124,6 @@
           <p class="contact-mail">mail: contact@nothingbothersme.com</p>
         </div>
       </div>
-    </section>  -->
+    </section>
   </body>
 </html>
